--- a/.github/workflows/updateDocs.yml
+++ b/.github/workflows/updateDocs.yml
@@ -31,5 +31,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: docs/.vitepress/dist
+          publish_dir: .vitepress/dist
           publish_branch: gh-pages
