feat: add custom domain configuration for GitHub Pages deployment

--- a/.github/workflows/updateDocs.yml
+++ b/.github/workflows/updateDocs.yml
@@ -26,6 +26,8 @@ jobs:
         run: |
           pnpm install
           pnpm run build
+          cd .vitepress/dist
+          echo "note-gen.top" > CNAME
 
       - name: deploy
         uses: peaceiris/actions-gh-pages@v3
