--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vitepress": "^1.6.3"
   },
   "dependencies": {
-    "axios": "^1.9.0"
+    "axios": "^1.9.0",
+    "lucide-vue-next": "^0.511.0"
   }
 }
