--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "docs:dev": "vitepress dev",
+    "dev": "vitepress dev",
     "build": "vitepress build",
-    "docs:preview": "vitepress preview"
+    "preview": "vitepress preview"
   },
   "keywords": [],
   "author": "",
